--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "react-workshop",
+  "name": "mongo-crud",
   "version": "1.0.0",
-  "description": "",
-  "type": "module",
+  "description": "A simple express server for API",
+  "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "serve": "node index.js",
+    "start": "node index.js",
     "dev": "nodemon"
   },
   "repository": {
@@ -20,7 +20,9 @@
   },
   "homepage": "https://github.com/lucoadam/react-workshop#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "mongoose": "^7.1.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
