--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DEV_MONGO_URL='mongodb://localhost:27017/users'
+DEV_MONGO_URL='mongodb://127.0.0.1:27017/users'
 
-PROD_MONGO_URL='mongodb+srv://Bidhan:<password>@cluster0.f4ytqte.mongodb.net/?retryWrites=true&w=majority'
+PROD_MONGO_URL='mongodb+srv://Bidhan:Bidhan123@cluster0.f4ytqte.mongodb.net/Database?retryWrites=true&w=majority'
 
-NODE_ENV= development;
+NODE_ENV= production
