--- a/.env
+++ b/.env
@@ -3,3 +3,7 @@ DEV_MONGO_URL='mongodb://127.0.0.1:27017/register'
 PROD_MONGO_URL='mongodb+srv://Bidhan:Bidhan123@cluster0.f4ytqte.mongodb.net/Database?retryWrites=true&w=majority'
 
 NODE_ENV= development
+
+JWT_SECRET= "bidhan"
+
+JWT_EXPIRE="3h"
